; ModuleID = '/home/carl/AnghaBench/php-src/ext/date/lib/extr_dow.c_timelib_days_in_month.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/date/lib/extr_dow.c_timelib_days_in_month.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ml_table_leap = common dso_local global i64* null, align 8
@ml_table_common = common dso_local global i64* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @timelib_days_in_month(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %3, align 8
  %6 = call i64 @timelib_is_leap(i64 %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %13

8:                                                ; preds = %2
  %9 = load i64*, i64** @ml_table_leap, align 8
  %10 = load i64, i64* %4, align 8
  %11 = getelementptr inbounds i64, i64* %9, i64 %10
  %12 = load i64, i64* %11, align 8
  br label %18

13:                                               ; preds = %2
  %14 = load i64*, i64** @ml_table_common, align 8
  %15 = load i64, i64* %4, align 8
  %16 = getelementptr inbounds i64, i64* %14, i64 %15
  %17 = load i64, i64* %16, align 8
  br label %18

18:                                               ; preds = %13, %8
  %19 = phi i64 [ %12, %8 ], [ %17, %13 ]
  ret i64 %19
}

declare dso_local i64 @timelib_is_leap(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
